# Cognitive_Cybersecurity

./: CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-agents.txt  requirements-deep.txt  requirements-llm.txt  requirements.txt
configs/: config.yaml  models.yaml
datasets/: README.md
docs/: architecture.md  data_provenance.md  experiment_guide.md  installation.md
experiments/: run_baseline_benchmark.py  run_cognitive_poc.py
notebooks/: 01_Data_Preprocessing.ipynb  02_Baseline_Models.ipynb  03_UEBA.ipynb  04_Knowledge_Graph.ipynb  05_LLM_RAG.ipynb  06_Digital_Twin.ipynb  07_Reinforcement_Learning.ipynb  08_Multi_Agent_Framework.ipynb  09_Human_AI_Collaboration.ipynb  10_Experiments.ipynb  11_Statistical_Analysis.ipynb  12_Generate_Paper_Figures.ipynb
outputs/: cognitive_poc_manifest.json  collaboration_summary.json  run_manifest.json
tables/: ablation_results.csv  ablation_results.md  ablation_results.tex  ablation_results.xlsx  all_baseline_results.csv  all_baseline_results.md  all_baseline_results.tex  all_baseline_results.xlsx  digital_twin_validation_by_action.csv  digital_twin_validation_by_action.md  digital_twin_validation_by_action.tex  digital_twin_validation_by_action.xlsx  digital_twin_validation_raw.csv  digital_twin_validation_raw.md  digital_twin_validation_raw.tex  digital_twin_validation_raw.xlsx  kg_growth.csv  kg_growth.md  kg_growth.tex  kg_growth.xlsx  rl_policy_comparison.csv  rl_policy_comparison.md  rl_policy_comparison.tex  rl_policy_comparison.xlsx  scalability_results.csv  (+11 more)
(+24 files in other folders)
