[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitivecyber"
version = "0.1.0"
description = "CognitiveCyber: An Open Cognitive Cybersecurity Research Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CognitiveCyber Contributors" }]
keywords = ["cybersecurity", "intrusion-detection", "machine-learning", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
deep = ["torch>=2.2", "stable-baselines3>=2.3", "gymnasium>=0.29"]
llm = ["transformers>=4.40", "sentence-transformers>=2.6", "faiss-cpu>=1.8", "langchain>=0.2", "anthropic>=0.30"]
agents = ["langgraph>=0.1", "crewai>=0.35", "openai>=1.30"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
